Source/JavaScriptCore/tools/JSDollarVM.cpp
@@ -53,6 +53,7 @@
 #include "VMInspector.h"
 #include "WasmCapabilities.h"
 #include <wtf/Atomics.h>
+#include <wtf/CPUTime.h>
 #include <wtf/DataLog.h>
 #include <wtf/ProcessID.h>
 #include <wtf/StringPrintStream.h>
@@ -2675,6 +2676,12 @@ static EncodedJSValue JSC_HOST_CALL functionDeltaBetweenButterflies(JSGlobalObje
     return JSValue::encode(jsNumber(static_cast<int32_t>(delta)));
 }
 
+static EncodedJSValue JSC_HOST_CALL functionCurrentCPUTime(JSGlobalObject*, CallFrame*)
+{
+    DollarVMAssertScope assertScope;
+    return JSValue::encode(jsNumber(CPUTime::forCurrentThread().value()));
+}
+
 static EncodedJSValue JSC_HOST_CALL functionTotalGCTime(JSGlobalObject* globalObject, CallFrame*)
 {
     DollarVMAssertScope assertScope;
@@ -2832,6 +2839,7 @@ void JSDollarVM::finishCreation(VM& vm)
 
     addFunction(vm, "deltaBetweenButterflies", functionDeltaBetweenButterflies, 2);
     
+    addFunction(vm, "currentCPUTime", functionCurrentCPUTime, 0);
     addFunction(vm, "totalGCTime", functionTotalGCTime, 0);
 
     addFunction(vm, "parseCount", functionParseCount, 0);
